--- a/package.json
+++ b/package.json
@@ -21,5 +21,13 @@
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.5.4",
     "uuid": "^10.0.0"
+  },
+  "devDependencies": {
+    "@types/chai": "^4.3.19",
+    "@types/mocha": "^10.0.7",
+    "@types/supertest": "^6.0.2",
+    "chai": "^5.1.1",
+    "mocha": "^10.7.3",
+    "supertest": "^7.0.0"
   }
 }
