--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/aws-sdk": "^2.7.0",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.21",
     "@types/node": "^22.5.0",
     "@types/uuid": "^10.0.0",
+    "aws-sdk": "^2.1686.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "ts-node-dev": "^2.0.0",
